--- a/app/src/main/res/layout/fragment_match_tomorrow.xml
+++ b/app/src/main/res/layout/fragment_match_tomorrow.xml
@@ -2,11 +2,11 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvMatchTomorrow"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tomorrow match are !!!"/>
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
