--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#ffb300</color>
     <color name="colorPrimaryDark">#a36700</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="black_transparent">#46000000</color>
 </resources>
