--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -10,4 +10,9 @@
         android:id="@+id/navigation_tomorrow"
         android:icon="@drawable/ic_tomorrow_black_24dp"
         android:title="@string/title_navigation_tomorrow" />
+
+    <item
+        android:id="@+id/navigation_favorite"
+        android:icon="@drawable/ic_favorite"
+        android:title="@string/title_navigation_favorites"/>
 </menu>
